--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -1,9 +1,9 @@
 $fuente_principal : "Montserrat", serif;
 //colores
 $negro : #000;
-$verde: #4CB8B3;
-$rosa : #F53756;
-$amarillo : #FDDA00;
+$verde: #82e6e1;
+$rosa : #ec566f;
+$amarillo : #96f58d;
 $morado : #752F97;
 $blanco : #FFF;
 
