--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,7 +1,7 @@
 @forward 'header';
-@forward 'video';
-@forward 'festival';
-@forward 'lineup';
+@forward 'video1';
+@forward 'Equipo';
+@forward 'Servicios';
 @forward 'galeria';
-@forward 'boletos';
+@forward 'Ubicacion';
 @forward 'footer';
