--- a/src/scss/layout/_Servicios.scss
+++ b/src/scss/layout/_Servicios.scss
@@ -2,7 +2,7 @@
 @use 'base/mixins' as m;
 @use 'sass:color';
 
-.lineup{
+.Servicios{
     background-color: v.$rosa;
 }
 
@@ -34,6 +34,7 @@ h3,
         text-transform: uppercase;
         text-align: center;
     }
+    
 }
 
 
@@ -41,8 +42,8 @@ h3,
     @include m.resetear-lista;
     li{
         padding: 2.5rem;
-       font-weight: 700;   
-       span{
+    font-weight: 700;   
+    span{
         font-weight: 400;
     }
 }
